packages/goo2d_ffi_box2d/src/goo_box2d.h

	// --- contact and sensor events -----------------------------------------
	//
	// This is why Box2D **v3** was chosen over v2. v3 accumulates touch
	// transitions into flat arrays that you poll once after each step
	// (b2World_GetContactEvents / b2World_GetSensorEvents) rather than
	// calling you back mid-solve. Polling suits an FFI boundary; a callback
	// would mean a C function pointer re-entering Dart from inside the
	// solver, on the hot path, with no good answer for what may be touched
	// while Box2D is mid-step.
	//
	// Both drains write fixed-stride records of 3 int64 each:
	//
	//     [ kind, shapeA, shapeB ]
	//
	// so `out` must have room for `3 * maxEvents` int64s. The return value is
	// the number of RECORDS written, not int64s.
	//
	// Only touch transitions are reported - "still touching" is not an event
	// Box2D has, and is maintained on the Dart side from these.

/// `kind` for a pair that has just started touching.
#define GOO_TOUCH_BEGIN 0
/// `kind` for a pair that has just stopped touching.
#define GOO_TOUCH_END 1
	/// Creates a mouse joint - drags body B towards a world-space target.
	/// Unity calls this a Target Joint 2D. Mouse dragging, tractor beams.
	///
	/// The target is world space, not body-local, because that is the whole
	/// point: it is where you want the body to go, not a point on it.
	GOO_API int64_t gooJointCreateMouse( int64_t bodyA, int64_t bodyB, float targetX, float targetY,
										 float hertz, float dampingRatio, float maxForce,
										 int32_t collideConnected );
	/// Moves a mouse joint's world-space target. The one joint parameter that
	/// is expected to change every frame, so it gets its own entry point.
	GOO_API void gooJointSetMouseTarget( int64_t joint, float x, float y );
	GOO_API void gooJointDestroy( int64_t joint );
	/// Whether [joint] still names a live joint. Zero once either of its
	/// bodies has been destroyed, which destroys the joint with it.
	GOO_API int32_t gooJointIsValid( int64_t joint );
	/// Motor control, shared by both joint types above. `speed` is rad/s for a
	/// revolute joint and m/s for a distance one; `maxEffort` is the torque or
	/// force the motor may use to reach it.
	GOO_API void gooJointSetMotor( int64_t joint, int32_t enable, float speed, float maxEffort );
	/// The force this joint is currently applying, in newtons, written as two
	/// floats (x, y) into `outForce`. Returns the torque, in newton-metres.
	///
	/// Together these are what a **breakable** joint is built from: compare
	/// against a threshold each tick and destroy the joint when it is
	/// exceeded. Box2D has no breaking of its own.
	GOO_API float gooJointGetReaction( int64_t joint, float* outForce );
	// --- diagnostics -------------------------------------------------------
	//
	// What the world actually contains, as opposed to how long it took. A step
	// time on its own cannot distinguish "many bodies" from "many bodies that
	// refuse to go to sleep", and those have completely different fixes.

	/// Bodies Box2D is still integrating. A settled pile sleeps, and a sleeping
	/// body costs almost nothing - so this next to the body count is the
	/// difference between a scene that is heavy and one that is agitated.
	GOO_API int32_t gooWorldAwakeBodyCount( int64_t world );
	/// Writes `min(count, GOO_COUNTER_COUNT)` int32 counters into `out`:
	///
	///     [ bodies, shapes, contacts, joints, islands ]
	///
	/// Flattened into a caller's array rather than returned as `b2Counters`,
	/// which is a struct by value - the one thing this shim exists to keep out
	/// of the Dart bindings.
	///
	/// **Contacts here are potential (broad-phase) pairs**, not the touching
	/// pairs the event API reports. A pile whose contact count climbs far
	/// faster than its body count is overlapping, not merely large.
	GOO_API void gooWorldCounters( int64_t world, int32_t* out, int32_t count );
/// How many counters [gooWorldCounters] can write.
#define GOO_COUNTER_COUNT 5
	// --- spatial queries ---------------------------------------------------
	//
	// `category`/`mask` are a b2QueryFilter: the query is treated as if it
	// were a shape in `category`, colliding with `mask`. Passing category 1
	// and mask ~0 queries everything.

	/// Casts a ray from (originX, originY) along (dx, dy) - a *translation*,
	/// not a direction, so its length is the ray's length.
	///
	/// Returns the packed handle of the closest shape hit, or 0 for a miss.
	/// On a hit, writes 5 floats into `outHit`:
	///
	///     [ pointX, pointY, normalX, normalY, fraction ]
	///
	/// Split that way because the handle is an integer and the rest are
	/// floats; one mixed buffer would have to be punned on the Dart side.
	/// `outHit` is untouched on a miss.
	GOO_API int64_t gooWorldCastRayClosest( int64_t world, float originX, float originY, float dx,
											float dy, uint64_t category, uint64_t mask,
											float* outHit );
	/// Collects the shapes whose fat AABB overlaps the given box, writing
	/// packed handles into `outShapes`. Returns how many were written.
	///
	/// This is a **broad-phase** test: an AABB overlap, not an exact shape
	/// overlap. It is what you want for "roughly what is in this region";
	/// callers needing exactness re-test the survivors themselves.
	///
	/// Results beyond `maxShapes` are dropped rather than growing anything.
	GOO_API int32_t gooWorldOverlapAABB( int64_t world, float minX, float minY, float maxX,
										 float maxY, uint64_t category, uint64_t mask,
										 int64_t* outShapes, int32_t maxShapes );