packages/goo2d_ffi_box2d/lib/src/box2d.g.dart


  late final _gooJointCreateMousePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateMouse');
  late final _gooJointCreateMouse = _gooJointCreateMousePtr.asFunction<
      int Function(int, int, double, double, double, double, double, int)>();

  /// Moves a mouse joint's world-space target. The one joint parameter that
  /// is expected to change every frame, so it gets its own entry point.
  void gooJointSetMouseTarget(
    int joint,
    double x,
    double y,
  ) {
    return _gooJointSetMouseTarget(
      joint,
      x,
      y,
    );
  }

  late final _gooJointSetMouseTargetPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>>(
      'gooJointSetMouseTarget');
  late final _gooJointSetMouseTarget = _gooJointSetMouseTargetPtr
      .asFunction<void Function(int, double, double)>();

  void gooJointDestroy(
    int joint,
  ) {
    return _gooJointDestroy(
      joint,
    );
  }

  late final _gooJointDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'gooJointDestroy');
  late final _gooJointDestroy =
      _gooJointDestroyPtr.asFunction<void Function(int)>();

  /// Whether [joint] still names a live joint. Zero once either of its
  /// bodies has been destroyed, which destroys the joint with it.
  int gooJointIsValid(
    int joint,
  ) {
    return _gooJointIsValid(
      joint,
    );
  }

  late final _gooJointIsValidPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooJointIsValid');
  late final _gooJointIsValid =
      _gooJointIsValidPtr.asFunction<int Function(int)>();

  /// Motor control, shared by both joint types above. `speed` is rad/s for a
  /// revolute joint and m/s for a distance one; `maxEffort` is the torque or
  /// force the motor may use to reach it.
  void gooJointSetMotor(
    int joint,
    int enable,
    double speed,
    double maxEffort,
  ) {
    return _gooJointSetMotor(
      joint,
      enable,
      speed,
      maxEffort,
    );
  }

  late final _gooJointSetMotorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Int32, ffi.Float, ffi.Float)>>('gooJointSetMotor');
  late final _gooJointSetMotor = _gooJointSetMotorPtr
      .asFunction<void Function(int, int, double, double)>();

  /// The force this joint is currently applying, in newtons, written as two
  /// floats (x, y) into `outForce`. Returns the torque, in newton-metres.
  ///
  /// Together these are what a **breakable** joint is built from: compare
  /// against a threshold each tick and destroy the joint when it is
  /// exceeded. Box2D has no breaking of its own.
  double gooJointGetReaction(
    int joint,
    ffi.Pointer<ffi.Float> outForce,
  ) {
    return _gooJointGetReaction(
      joint,
      outForce,
    );
  }

  late final _gooJointGetReactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Float Function(
              ffi.Int64, ffi.Pointer<ffi.Float>)>>('gooJointGetReaction');
  late final _gooJointGetReaction = _gooJointGetReactionPtr
      .asFunction<double Function(int, ffi.Pointer<ffi.Float>)>();

  /// Bodies Box2D is still integrating. A settled pile sleeps, and a sleeping
  /// body costs almost nothing - so this next to the body count is the
  /// difference between a scene that is heavy and one that is agitated.
  int gooWorldAwakeBodyCount(
    int world,
  ) {
    return _gooWorldAwakeBodyCount(
      world,
    );
  }

  late final _gooWorldAwakeBodyCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooWorldAwakeBodyCount');
  late final _gooWorldAwakeBodyCount =
      _gooWorldAwakeBodyCountPtr.asFunction<int Function(int)>();

  /// Writes `min(count, GOO_COUNTER_COUNT)` int32 counters into `out`:
  ///
  /// [ bodies, shapes, contacts, joints, islands ]
  ///
  /// Flattened into a caller's array rather than returned as `b2Counters`,
  /// which is a struct by value - the one thing this shim exists to keep out
  /// of the Dart bindings.
  ///
  /// **Contacts here are potential (broad-phase) pairs**, not the touching
  /// pairs the event API reports. A pile whose contact count climbs far
  /// faster than its body count is overlapping, not merely large.
  void gooWorldCounters(
    int world,
    ffi.Pointer<ffi.Int32> out,
    int count,
  ) {
    return _gooWorldCounters(
      world,
      out,
      count,
    );
  }

  late final _gooWorldCountersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Int32>,
              ffi.Int32)>>('gooWorldCounters');
  late final _gooWorldCounters = _gooWorldCountersPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Int32>, int)>();

  /// Casts a ray from (originX, originY) along (dx, dy) - a *translation*,
  /// not a direction, so its length is the ray's length.
  ///
  /// Returns the packed handle of the closest shape hit, or 0 for a miss.
  /// On a hit, writes 5 floats into `outHit`:
  ///
  /// [ pointX, pointY, normalX, normalY, fraction ]
  ///
  /// Split that way because the handle is an integer and the rest are
  /// floats; one mixed buffer would have to be punned on the Dart side.
  /// `outHit` is untouched on a miss.
  int gooWorldCastRayClosest(
    int world,
    double originX,
    double originY,
    double dx,
    double dy,
    int category,
    int mask,
    ffi.Pointer<ffi.Float> outHit,
  ) {
    return _gooWorldCastRayClosest(
      world,
      originX,
      originY,
      dx,
      dy,
      category,
      mask,
      outHit,
    );
  }

  late final _gooWorldCastRayClosestPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Pointer<ffi.Float>)>>('gooWorldCastRayClosest');
  late final _gooWorldCastRayClosest = _gooWorldCastRayClosestPtr.asFunction<
      int Function(int, double, double, double, double, int, int,
          ffi.Pointer<ffi.Float>)>();

  /// Collects the shapes whose fat AABB overlaps the given box, writing
  /// packed handles into `outShapes`. Returns how many were written.
  ///
  /// This is a **broad-phase** test: an AABB overlap, not an exact shape
  /// overlap. It is what you want for "roughly what is in this region";
  /// callers needing exactness re-test the survivors themselves.
  ///
  /// Results beyond `maxShapes` are dropped rather than growing anything.
  int gooWorldOverlapAABB(
    int world,
    double minX,
    double minY,
    double maxX,
    double maxY,
    int category,
    int mask,
    ffi.Pointer<ffi.Int64> outShapes,
    int maxShapes,
  ) {
    return _gooWorldOverlapAABB(
      world,
      minX,
      minY,
      maxX,
      maxY,
      category,
      mask,
      outShapes,
      maxShapes,
    );
  }

  late final _gooWorldOverlapAABBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('gooWorldOverlapAABB');
  late final _gooWorldOverlapAABB = _gooWorldOverlapAABBPtr.asFunction<
      int Function(int, double, double, double, double, int, int,
          ffi.Pointer<ffi.Int64>, int)>();
}

const int GOO_TOUCH_BEGIN = 0;

const int GOO_TOUCH_END = 1;

const int GOO_COUNTER_COUNT = 5;
